...
                    onChatBotTap: {
                        coordinator.showAIBotSheet()
                    }
                )
            }
            .background(Color.pageBackground)
            .accessibilityIdentifier("home_view")
            //            .padding(.top , 16)
            //            .background(Color.red)
            
            
            // ------------ COORDINATED INITIAL LOAD ------------
                .task {
...
