...
                    .navigationBarBackButtonHidden()
            } else {
                defaultView
            }
        }
        .background(Color.pageBackground)
        .accessibilityIdentifier("recent_scans_page_view")
    }

    private var filteredScans: [DTO.Scan] {
        guard let scans = appState.listsTabState.scans else { return [] }
        switch selectedFilter {
        case .all:
...
