...
//  Created by Gunjan Haldar   on 17/11/25.
//

import SwiftUI

struct IngredientsChipsForStackedCards: View {
    var title: String = "Peanuts"
    @State var bgColor: Color? = nil
    var fontColor: String = "000000"
    var fontSize: CGFloat = 12
    var fontWeight: Font.Weight = .regular
    var image: String? = nil
    var familyList: [String] = []
...
