...
import SwiftUI

struct Intolerances: View {
    @State var onboardingFlowType: OnboardingFlowType
    @Binding var preferences: Preferences
    @State var arr: [ChipsModel] = [
        ChipsModel(name: "Lactose", icon: "lactose"),
        ChipsModel(name: "Fructose", icon: "fructose"),
        ChipsModel(name: "Histamine", icon: "histamine"),
        ChipsModel(name: "Gluten / wheat", icon: "wheat"),
        ChipsModel(name: "Fodmap", icon: "fodmap"),
        ChipsModel(name: "Other", icon: "other")
    ]
...
