appId: llc.fungee.ingredicheck
tags: [lists, recent-scans, filter]
---
- runFlow: ../../subflows/launch/recent_scans.yaml
- extendedWaitUntil:
    visible:
      id: recent_scans_page_view
    timeout: 30000
- assertVisible:
    text: Diet Coke Soft Drink
- tapOn:
    text: Fav
- extendedWaitUntil:
    visible:
      text: Oreo Original
    timeout: 10000
- assertVisible:
    text: Oreo Original
- assertNotVisible:
    text: Diet Coke Soft Drink
