appId: llc.fungee.ingredicheck
---
- tapOn:
    id: "scan_ui_test_inject_barcode_button"
- extendedWaitUntil:
    visible:
      id: "debug_barcode_injector_sheet"
    timeout: 5000
- waitForAnimationToEnd
- tapOn: "${PRESET_LABEL}"
- tapOn: "Inject"
