appId: llc.fungee.ingredicheck
tags: [family]
---
- runFlow: ../../subflows/launch/manage_family.yaml
- extendedWaitUntil:
    visible:
      id: manage_family_view
    timeout: 30000
- tapOn:
    id: manage_family_invite_button_33333333-3333-3333-3333-333333333333
- extendedWaitUntil:
    visible:
      text: Invite sent
    timeout: 30000
- assertVisible:
    text: Invite sent
